# Adagio-Electron

./: .gitignore  README.md
app/: electron-builder.yml  package-lock.json  package.json
app/electron/: main.js  preload.js
app/engine/: WebSocketContext.jsx  WebSocketEngine.jsx
app/public/: index.html
app/src/main/: main.js
app/src/preload/: preload.js
app/src/renderer/: index.js
app/ui/: package-lock.json  package.json  vite.config.js
app/ui/src/: App.css  App.jsx  index.css  main.jsx
app/ui/src/components/: AnalysisSection.jsx  AudioTimeline.jsx  FooterBar.jsx  HeaderBar.jsx  MainContent.jsx  PlaybackControls.jsx  RollingNotesHeatMap.jsx  SpectrumCanvas.jsx  TimelineInterationHandler.jsx
app/ui/src/context/: AudioContext.jsx
app/ui/src/hooks/: useEngineEvents.jsx
app/ui/src/router/: EngineEventRouter.jsx
app/ui/src/store/: PlaybackSlice.jsx  Store.jsx  analysisSlice.jsx  appSlice.jsx  settingsSlice.jsx
app/ui/src/utils/: utils.jsx
engine/: CMakeLists.txt
engine/src/: main.cpp
engine/src/API/: Utils.h
engine/src/Analysis/: AnalysisPipeline.cpp  AnalysisPipeline.h  AnalysisProcessor.h  AnalysisService.cpp  AnalysisService.h  AnalysisStage.h  AnalysisUtils.h  AudioFrame.h  FFTProcessor.h  HPSDownsamplerProcessor.h  KeyDetector.h  NoteDetector.h  PeakExtractor.h  SpectrumFilterProcessor.h
engine/src/Buffers/: RingBuffer.h
engine/src/Core/: Application.cpp  Application.h  AudioDecoder.cpp  AudioDecoder.h  AudioUtils.h  Command.h  CommandQueue.h  MessageQueue.h  TimeProcessor.cpp  TimeProcessor.h  WebSocketServer.cpp  WebSocketServer.h
engine/src/Debug/: Instrumentation.h
engine/src/IO/: AudioData.h  AudioFileHandler.cpp  AudioFileHandler.h  FileIOService.cpp  FileIOService.h  PlaybackService.cpp  PlaybackService.h  WaveformBuilder.cpp  WaveformBuilder.h
